--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.7",
+    "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
