--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -1,36 +1,45 @@
 {
-  "name": "job-portal",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@redux-devtools/extension": "^3.2.5",
-    "flowbite": "^1.6.5",
-    "flowbite-react": "^0.4.7",
-    "formik": "^2.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0",
-    "react-router-dom": "^6.11.2",
-    "yup": "^1.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
-    "vite": "^4.3.9"
-  }
+   "name": "job-portal",
+   "private": true,
+   "version": "0.0.0",
+   "type": "module",
+   "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+      "preview": "vite preview"
+   },
+   "dependencies": {
+      "@redux-devtools/extension": "^3.2.5",
+      "axios": "^1.4.0",
+      "flowbite": "^1.6.5",
+      "flowbite-react": "^0.4.7",
+      "formik": "^2.4.1",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-icons": "^4.9.0",
+      "react-redux": "^8.1.0",
+      "react-router-dom": "^6.13.0",
+      "react-toastify": "^9.1.3",
+      "redux": "^4.2.1",
+      "redux-thunk": "^2.4.2",
+      "web-vitals": "^3.3.2",
+      "yup": "^1.2.0"
+   },
+   "devDependencies": {
+      "@babel/core": "^7.22.5",
+      "@babel/preset-react": "^7.22.5",
+      "@types/react": "^18.0.37",
+      "@types/react-dom": "^18.0.11",
+      "@vitejs/plugin-react": "^4.0.0",
+      "autoprefixer": "^10.4.14",
+      "eslint": "^8.38.0",
+      "eslint-plugin-react": "^7.32.2",
+      "eslint-plugin-react-hooks": "^4.6.0",
+      "eslint-plugin-react-refresh": "^0.3.4",
+      "postcss": "^8.4.24",
+      "tailwindcss": "^3.3.2",
+      "vite": "^4.3.9"
+   },
+   "proxy": "http://localhost:5000"
 }
