--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -18,6 +18,7 @@
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-icons": "^4.9.0",
+      "react-js-pagination": "^3.0.3",
       "react-redux": "^8.1.0",
       "react-router-dom": "^6.13.0",
       "react-toastify": "^9.1.3",
