--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -15,13 +15,13 @@
       "flowbite": "^1.6.5",
       "flowbite-react": "^0.4.7",
       "formik": "^2.4.1",
+      "js-cookie": "^3.0.5",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-icons": "^4.9.0",
       "react-js-pagination": "^3.0.3",
       "react-redux": "^8.1.0",
       "react-router-dom": "^6.13.0",
-      "react-toastify": "^9.1.3",
       "redux": "^4.2.1",
       "redux-thunk": "^2.4.2",
       "web-vitals": "^3.3.2",
@@ -41,6 +41,5 @@
       "postcss": "^8.4.24",
       "tailwindcss": "^3.3.2",
       "vite": "^4.3.9"
-   },
-   "proxy": "http://localhost:5000"
+   }
 }
