--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -10,6 +10,7 @@
       "preview": "vite preview"
    },
    "dependencies": {
+      "@heroicons/react": "^1.0.6",
       "@redux-devtools/extension": "^3.2.5",
       "axios": "^1.4.0",
       "flowbite": "^1.6.5",
@@ -20,6 +21,7 @@
       "react-dom": "^18.2.0",
       "react-icons": "^4.9.0",
       "react-js-pagination": "^3.0.3",
+      "react-pro-sidebar": "^1.1.0-alpha.1",
       "react-redux": "^8.1.0",
       "react-router-dom": "^6.13.0",
       "redux": "^4.2.1",
