--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -17,7 +17,9 @@
       "flowbite-react": "^0.4.7",
       "formik": "^2.4.1",
       "js-cookie": "^3.0.5",
+      "moment": "^2.29.4",
       "react": "^18.2.0",
+      "react-cookie": "^4.1.1",
       "react-dom": "^18.2.0",
       "react-icons": "^4.9.0",
       "react-js-pagination": "^3.0.3",
