--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -21,6 +21,7 @@
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
       "react-dom": "^18.2.0",
+      "react-google-charts": "^4.0.0",
       "react-icons": "^4.9.0",
       "react-js-pagination": "^3.0.3",
       "react-pro-sidebar": "^1.1.0-alpha.1",
