--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -24,7 +24,10 @@
       "react-google-charts": "^4.0.0",
       "react-icons": "^4.9.0",
       "react-js-pagination": "^3.0.3",
+      "react-lazy-load": "^4.0.1",
+      "react-lazy-load-image-component": "^1.6.0",
       "react-pro-sidebar": "^1.1.0-alpha.1",
+      "react-quill": "^2.0.0",
       "react-redux": "^8.1.0",
       "react-router-dom": "^6.13.0",
       "redux": "^4.2.1",
