--- a/job-portal/package.json
+++ b/job-portal/package.json
@@ -11,12 +11,15 @@
    },
    "dependencies": {
       "@heroicons/react": "^1.0.6",
+      "@react-oauth/google": "^0.11.0",
       "@redux-devtools/extension": "^3.2.5",
       "axios": "^1.4.0",
       "flowbite": "^1.6.5",
       "flowbite-react": "^0.4.7",
       "formik": "^2.4.1",
       "js-cookie": "^3.0.5",
+      "jsonwebtoken": "^9.0.0",
+      "jwt-decode": "^3.1.2",
       "moment": "^2.29.4",
       "react": "^18.2.0",
       "react-cookie": "^4.1.1",
